--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="./e.dt.js"></script>
   <script defer src="./g.voix.js"></script>
   <script defer src="./g.icon.js"></script>
+  <script defer src="./g.sc.js"></script>
   <script defer src="./index.js"></script>
 </head>
 <body>
