--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html>
+<html lang="fr">
 <head>
-  <title>wsc v2.7</title>
+  <title>wsc v2.8 beta</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"><!--
   <script src="https://cdn.jsdelivr.net/npm/pace-js@1.0.2/pace.min.js" integrity="sha256-wNhWj+b52Df2ZAAPGXPyIAnXdqq7Sb1tr2kpEoJfbig=" crossorigin="anonymous"></script>
