--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="col-xs-6">
             <div class="input-group col-xs-12">
-              <input type="password" class="input-sm" name="motsecret" id="motsecret" placeholder="Mot secret" required />
+              <input type="password" class="input-sm" name="pass" id="pass" placeholder="Mot secret" required />
             </div>
           </div>
         </div>
