--- a/m.sc.html
+++ b/m.sc.html
@@ -1,13 +1,18 @@
-<div id="modaleSC" class="modal-dialog modal-sm smallSize" role="document">
+<div id="modaleSC" class="modal-dialog normalSize" role="document">
   <div class="modal-content">
     <div class="modal-header text-center">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      <button id="bstopSC" type="button" class="btn">Arrêter le partage d'écran</button>
+      <div id="divSlider" class="form-group text-center ">
+        <input type="text" id="nsecure" data-provider="slider" data-slider-min="50" data-slider-max="100" data-slider-step="25" data-slider-value="50"/>
+      </div>
+      <div class="btn-group btn-toggle"> 
+        <button id="bShare" class="btn btn-sm btn-default">Partager mon écran</button>
+        <button id="bstopSC" class="btn btn-sm btn-primary active">Arrêter le partage d'écran</button>
+      </div>
     </div>
     <div class="modal-body text-center">
-      <button id="bShare" type="button" class="btn">Partager mon écran</button>
       <video id="video"></video>
       <img id="image"></img>
     </div>
