--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/bootstrap-slider.min.js" integrity="sha256-oj52qvIP5c7N6lZZoh9z3OYacAIOjsROAcZBHUaJMyw=" crossorigin="anonymous"></script>
   <!-- <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/4.5.2/bootstrap.min.js"></script> -->
-  <script src="./js/e.mb.js"></script>
+  <script src="./js/e.md.js"></script>
   <script src="./lib/lz-string.min.js"></script>
   <script defer src="./g.voix.js"></script>
   <script defer src="./g.icon.js"></script>
