--- a/m.sc.html
+++ b/m.sc.html
@@ -5,6 +5,7 @@
         <span aria-hidden="true">&times;</span>
       </button>
       <div class ="row">
+        <div id="divmoy">moy = <span id="moy"> </span></div>
         <div class="col-sm-12 col-lg-6">
           <div id="divSlider" class="form-group text-center">
             <label id="lslider" for="nsecure" >Resize window</label>
