--- a/m.sc.html
+++ b/m.sc.html
@@ -4,23 +4,20 @@
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
+      <div id="divkbytes"><span id="kbytes"></span> Kb</div>
       <div id="sliderReceveur">
-        <div id="divResizeWindow" class="form-group text-center">
-          <label id="lresizeWindow" for="nresizeWindow">Resize window</label>
+        <div id="divResizeWindow" class="form-group text-center" data-toggle="tooltip" data-placement="bottom" title="Resize window">
           <input type="text" id="nresizeWindow" data-provider="slider" data-slider-min="50" data-slider-max="100" data-slider-step="25" data-slider-value="50"/>
         </div>
       </div>
       <div id="sliderEmetteur">
-        <div id="divResizeCanvas" class="form-group text-center">
-          <label id="lresizeCanvas" for="nresizeCanvas">Resize canvas</label>
+        <div id="divResizeCanvas" class="form-group text-center" data-toggle="tooltip" data-placement="bottom" title="Resize canvas">
           <input type="text" id="nresizeCanvas" data-provider="slider" data-slider-min="50" data-slider-max="100" data-slider-step="10" data-slider-value="80"/>
         </div>
-        <div id="divPurete" class="form-group text-center">
-          <label id="lpurete" for="npurete">Pureté image</label>
+        <div id="divPurete" class="form-group text-center" data-toggle="tooltip" data-placement="bottom" title="Pureté image">
           <input type="text" id="npurete" data-provider="slider" data-slider-min="20" data-slider-max="100" data-slider-step="20" data-slider-value="80"/>
         </div>
-        <div id="divRefresh" class="form-group text-center">
-          <label id="lrefresh" for="nrefresh">Refresh rate</label>
+        <div id="divRefresh" class="form-group text-center" data-toggle="tooltip" data-placement="bottom" title="Refresh rate">
           <input type="text" id="nrefresh" data-provider="slider" data-slider-min="200" data-slider-max="2000" data-slider-step="50" data-slider-value="500"/>
         </div>
       </div>
