--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="welcome">
       <div class="hidden-xs col-sm-4">
         <button id="bdeconnexion" type="button" class="btn" data-toggle="tooltip" data-placement="bottom" title="Déconnexion">&times;</button>
-        <span  class="glyphicon glyphicon-menu-right"></span> <span id="welcometext">Marie</span>
+        <span  class="glyphicon glyphicon-menu-right"></span> <span id="welcometext"></span>
       </div>
       <div id="divAudio" class="col-xs-6 col-sm-4">
         <div id="divEmission">
