--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <li>Pour partager du code dans le chat, vous pouvez tout simplement utiliser la balise html <code>&#60; pre> ... &#60; /pre></code>.</li>
               <li>Utilisez <span class='racc'>CTRL-0</span> pour remplacer les &#60; par des & #60;</li>
               <li>Utilisez <span class='racc'>CTRL-9</span> pour inclure le msg dans une balise &#60; pre></li>
-              <li>Utilisez <span class='racc'>CTRL-8</span> pour formater le msg (code) dans une balise &#60;pre class=&quot;prettyprint linenums&quot;&#62;</li>
+              <li>Utilisez <span class='racc'>CTRL-8</span> pour formater le msg (code) dans une balise &#60; pre &#62;</li>
               <li>Utilisez les touches <span class='racc'>Windows + ;</span> pour les émoicons</li>
               </ul>" data-toggle="popover" data-placement="top">
             <span class="glyphicon glyphicon-info-sign"></span>
