--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
               <li>Utilisez <span class='racc'>SHIFT-Enter</span> pour envoyer votre message.</li>
               <li>Cliquez &#160;<div id='bmodaleusers' class='glyphicon glyphicon-user'></div>, pour voir les usagers connectés</li>
               <li>Pour partager du code dans le chat, vous pouvez utiliser la balise html &#60; pre > ... &#60; /pre ></li>
-              <li>Utilisez <span class='racc'>CTRL-0</span> pour remplacer les &#60; par & #60;</li>
-              <li>Utilisez <span class='racc'>CTRL-9</span> pour inclure le msg dans une balise &#60; pre &#62;</li>
+              <li>Utilisez <kbd>Ctrl</kbd> + <kbd>0</kbd> pour remplacer les &#60; par & #60;</li>
+              <li>Utilisez <kbd>Ctrl</kbd> + <kbd>9</kbd> pour inclure le msg dans une balise &#60; pre &#62;</li>
               <li>Utilisez <span class='racc'><kbd>Ctrl</kbd> + <kbd>8</kbd></span> pour formater le msg (code C, Java..) dans une balise &#60; pre &#62;</li>
               <li>Utilisez les touches <span class='racc'><kbd>Windows</kbd> + <kbd>;</kbd></span> pour les émoicons</li>
               </ul>" data-toggle="popover" data-placement="top">
