--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
           <button id="bF" class="btn btn-success"><i class="glyphicon glyphicon-file"></i></button>
           <a tabIndex="0" id="bH" class="btn btn-default" role="button" data-container="body" data-trigger="focus" data-original-title="<strong>Hint</strong>" 
             data-content="<ul style='padding-left:10px;'>
-              <li>Utilisez <span class='racc'>SHIFT-Enter</span> pour envoyer votre message.</li>
+              <li>Utilisez <kbd>Shift</kbd> + <kbd>Enter</kbd> pour envoyer votre message</li>
               <li>Cliquez &#160;<div id='bmodaleusers' class='glyphicon glyphicon-user'></div>, pour voir les usagers connectés</li>
-              <li>Pour partager du code dans le chat, vous pouvez utiliser la balise html &#60; pre > ... &#60; /pre ></li>
-              <li>Utilisez <kbd>Ctrl</kbd> + <kbd>0</kbd> pour remplacer les &#60; par & #60;</li>
+              <li>Pour le formatage de votre msg, vous pouvez utiliser la balise html &#60; pre > ... &#60; /pre ></li>
+              <li>Utilisez <kbd>Ctrl</kbd> + <kbd>0</kbd> pour remplacer les &#60; par <code>&#60;</code></li>
               <li>Utilisez <kbd>Ctrl</kbd> + <kbd>9</kbd> pour inclure le msg dans une balise &#60; pre &#62;</li>
               <li>Utilisez <span class='racc'><kbd>Ctrl</kbd> + <kbd>8</kbd></span> pour formater le msg (code C, Java..) dans une balise &#60; pre &#62;</li>
               <li>Utilisez les touches <span class='racc'><kbd>Windows</kbd> + <kbd>;</kbd></span> pour les émoicons</li>
