--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
             data-content="<ul style='padding-left:10px;'>
               <li>Utilisez <kbd>Shift</kbd> + <kbd>Enter</kbd> pour envoyer votre message</li>
               <li>Cliquez &#160;<div id='bmodaleusers' class='glyphicon glyphicon-user'></div>, pour voir les usagers connectés</li>
-              <li>Pour le formatage de votre msg, vous pouvez utiliser la balise html &#60; pre > ... &#60; /pre ></li>
-              <li>Utilisez <kbd>Ctrl</kbd> + <kbd>0</kbd> pour remplacer les &#60; par <code>&#60;</code></li>
-              <li>Utilisez <kbd>Ctrl</kbd> + <kbd>9</kbd> pour inclure le msg dans une balise &#60; pre &#62;</li>
-              <li>Utilisez <span class='racc'><kbd>Ctrl</kbd> + <kbd>8</kbd></span> pour formater le msg (code C, Java..) dans une balise &#60; pre &#62;</li>
+              <li>Pour maintenir le formatage de votre msg, vous pouvez utiliser la balise html <code>&#60; pre > ... &#60; /pre ></code></li>
+              <li>Utilisez <kbd>Ctrl</kbd> + <kbd>0</kbd> pour remplacer les <code>&#60;</code> par <code>& #60;</code></li>
+              <li>Utilisez <kbd>Ctrl</kbd> + <kbd>9</kbd> pour inclure le msg dans une balise <code>&#60; pre &#62;</code></li>
+              <li>Utilisez <span class='racc'><kbd>Ctrl</kbd> + <kbd>8</kbd></span> pour formater le msg (code C, Java..) dans une balise <code>&#60; pre &#62;</code></li>
               <li>Utilisez les touches <span class='racc'><kbd>Windows</kbd> + <kbd>;</kbd></span> pour les émoicons</li>
               </ul>" data-toggle="popover" data-placement="top">
             <span class="glyphicon glyphicon-info-sign"></span>
