--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <link rel="stylesheet" type="text/css" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/css/bootstrap-slider.min.css">
   <link rel="stylesheet" type="text/css" href="./wsc.css">
-  <link rel="stylesheet" href="./3rd/prettify/prettify.css">
-  <script src="./3rd/prettify/prettify.js"></script>
+  <link rel="stylesheet" href="./3rd/prettify/prettify.min.css">
+  <link rel="stylesheet" href="./3rd/prettify/fix.css">
+  <script src="./3rd/prettify/prettify.min.js"></script>
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.0/umd/popper.min.js"></script>
   <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"></script>
