--- a/m.sc.html
+++ b/m.sc.html
@@ -5,8 +5,10 @@
         <span aria-hidden="true">&times;</span>
       </button>
       <div id="divkbytes"><span id="kbytes"></span> Kb</div>
+      <button id="bExitFull" type="button" class="btn"><i class="glyphicon glyphicon-resize-small"></i></button>
       <div id="sliderReceveur">
         <div id="divResizeWindow" class="form-group text-center" data-toggle="tooltip" data-placement="bottom" title="Resize window">
+          <button id="bFull" type="button" class="btn"><i class="glyphicon glyphicon-fullscreen"></i></button>
           <input type="text" id="nresizeWindow" data-provider="slider" data-slider-min="50" data-slider-max="100" data-slider-step="25" data-slider-value="50"/>
         </div>
       </div>
