--- a/index.html
+++ b/index.html
@@ -126,34 +126,6 @@
     </div>
   </form>
 
-<!--<div class="modal" tabindex="-1" role="dialog"> ceci va dans la page principale -->
-<div class="modal fade" id="m_i" tabindex="-1" role="dialog" aria-labelledby="m_iTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document" style="max-width: 450px">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h3 class="modal-title col text-center">Image</h3>
-      </div>
-      <div class="modal-body">
-        <div class="input-group">
-          <div class="input-group">
-            <span class="input-group-addon" id="inputGroupFileAddon01"><i class="glyphicon glyphicon-picture"></i></span>
-            <input onchange="readURL(this);" type="file" class="form-control" id="fName" placeholder="PNG, JPG" aria-describedby="inputGroupFileAddon01">
-            <span class="input-group-addon" id="inputGroupFileAddon02">png, jpg</span>
-          </div>
-        </div>
-        <img id="preview" src="" class="img-responsive"/>
-      </div>
-      <div class="modal-footer">
-        <button id="bmSubmit" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-send"></i></button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- </div> -->
-
 <!-- modal start -->
 <div id="m_start">
   <div class="container-fluid">
@@ -184,6 +156,7 @@
 </div>
 <!-- modal end -->
 
+<div id="m_i" class="modal fade"  tabindex="-1" role="dialog" aria-labelledby="m_iTitle" aria-hidden="true"></div>
 <div id="m_aye" class="modal" tabindex="-1" role="dialog" aria-hidden="true"></div>
 <div id="m_sc" class="modal" tabindex="-1" role="dialog" aria-hidden="true"></div>
 
