--- a/m.i.html
+++ b/m.i.html
@@ -24,5 +24,5 @@
   </div>
 <!--</div>-->
   <script>
-    $.getScript('./m_i.js', console.log('m_i.js loaded'));
+    $.getScript('./m.i.js', console.log('m_i.js loaded'));
   </script>
