--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 </div>
 <!-- modal end -->
 
-<div id="m_i" class="modal fade"  tabindex="-1" role="dialog" aria-labelledby="m_iTitle" aria-hidden="true"></div>
+<div id="m_i" class="modal fade"  tabindex="-1" role="dialog" aria-hidden="true"></div>
 <div id="m_aye" class="modal" tabindex="-1" role="dialog" aria-hidden="true"></div>
 <div id="m_sc" class="modal" tabindex="-1" role="dialog" aria-hidden="true"></div>
 
