--- a/m.sc.html
+++ b/m.sc.html
@@ -1,4 +1,4 @@
-<div id="modaleSC" class="modal-dialog normalSize" role="document">
+<div id="modaleSC" class="modal-dialog" role="document">
   <div class="modal-content">
     <div class="modal-body text-center">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
