--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div id="welcome">
-      <div class="hidden-xs col-sm-4">
+      <div class="hidden-xs col-sm-4" style="display:flex;align-items:center;">
         <div class="live"></div>
         <span  class="glyphicon glyphicon-menu-right"></span> <span id="welcometext"></span>
       </div>
