--- a/index.html
+++ b/index.html
@@ -147,12 +147,7 @@
       <p><span id="usagersconnectes">Usagers connectés : </span><span id="count" class="label label-success"></span></p>
     </div>
     <hr>
-    <ul id="users">
-      <li>Test</li>
-      <li>Test</li>
-      <li>Test</li>
-      <li>Test</li>
-    </ul>
+    <ul id="users"></ul>
     <div id="listeIcons">
       <span id="icon1" data-toggle="tooltip" data-placement="bottom" title="Ça va">&#128077;</span>
       <span id="icon2" data-toggle="tooltip" data-placement="bottom" title="Ça ne va pas">&#128078;</span>
