--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       </div>
     </div>
     <div id="welcome">
-      <div class="hidden-xs col-sm-5" style="display:flex;align-items:center;">
+      <div class="hidden-xs col-sm-5 col-md-3" style="display:flex;align-items:center;">
         <div class="live"></div>
         <span  class="glyphicon glyphicon-menu-right"></span> <span id="welcometext"></span>
       </div>
-      <div id="divAudio" class="col-xs col-sm-3">
+      <div id="divAudio" class="col-xs col-sm-3 col-md-6">
         <div id="divEmission">
           <button id="bstart" class="btn" type="button">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-mic-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -77,7 +77,7 @@
           <button id="bmuteRecord" class="btn" type="button" disabled>Mute</button>
         </div>
         <div id="divReception">
-          <p >RECEPTION</p>
+          <p>RECEPTION</p>
           <button id="bmuteAudio" class="btn" type="button">
             <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-volume-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M8.717 3.55A.5.5 0 0 1 9 4v8a.5.5 0 0 1-.812.39L5.825 10.5H3.5A.5.5 0 0 1 3 10V6a.5.5 0 0 1 .5-.5h2.325l2.363-1.89a.5.5 0 0 1 .529-.06zM8 5.04L6.312 6.39A.5.5 0 0 1 6 6.5H4v3h2a.5.5 0 0 1 .312.11L8 10.96V5.04z"/>
@@ -85,9 +85,8 @@
             </svg>
           </button>
         </div>
-        <audio id="audio" autoplay></audio>
       </div>
-      <div id="divPrev" class="col-xs col-sm-5">
+      <div id="divPrev" class="col-xs col-sm-5 col-md-3">
         <div class="verticalAlign" style="margin-left:auto;">
           <button id="bshareScreen" class="btn" type="button" data-toggle="tooltip" data-placement="bottom" title="Partage d'écran">
             <svg width="1.8em" height="1.8em" fill="currentColor" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 472 472" xml:space="preserve"><g><g><path d="M200.743,147.999H10c-5.584,0.152-10.025,4.735-10,10.321v125.991c0.026,5.379,4.408,9.718,9.786,9.691c0.071,0,0.142-0.001,0.214-0.003h45v10h-8.944c-5.523,0-10,4.477-10,10c0,5.523,4.477,10,10,10h118.63c5.523,0,10-4.477,10-10c0-5.523-4.477-10-10-10H156v-10h44.743c5.522,0,10.257-4.166,10.257-9.688V158.32C210.906,152.684,206.378,148.129,200.743,147.999z M136,303.999H75v-10h61V303.999z M191,273.999H20v-106h171V273.999z"/><path d="M462,147.999L462,147.999H271.257c-5.635,0.13-10.162,4.685-10.257,10.321v125.991c0,5.522,4.735,9.688,10.257,9.688H316v10h-8.686c-5.523,0-10,4.477-10,10c0,5.523,4.477,10,10,10h118.63c5.523,0,10-4.477,10-10c0-5.523-4.477-10-10-10H417v-10h45c5.377,0.144,9.852-4.098,9.997-9.474c0.002-0.071,0.003-0.142,0.003-0.214V158.32C472.025,152.734,467.584,148.151,462,147.999z M397,303.999h-61v-10h61V303.999z M452,273.999H281v-106h171V273.999z"/><path d="M329.769,73.931c-0.001-0.001-0.003-0.003-0.004-0.004L301.8,45.962c-3.905-3.905-10.237-3.905-14.142,0c-3.859,3.795-3.912,9.999-0.117,13.859c0.039,0.039,0.078,0.078,0.117,0.117l11.228,11.061H10c-5.523,0-10,4.477-10,10c0,5.523,4.477,10,10,10h288.219l-10.559,10.726c-3.93,3.946-3.918,10.331,0.028,14.261c1.872,1.864,4.401,2.92,7.043,2.939c2.65,0.011,5.196-1.036,7.071-2.909l27.963-27.953C333.669,84.162,333.67,77.834,329.769,73.931z"/></g></g><g><g><path d="M462,380.999H173.781l10.559-10.726c3.905-3.938,3.905-10.288,0-14.225c-3.894-3.917-10.225-3.935-14.142-0.041l-27.963,27.942c-3.902,3.898-3.905,10.222-0.007,14.124c0.002,0.002,0.005,0.005,0.007,0.007l27.965,27.958c3.905,3.905,10.237,3.905,14.142,0c3.859-3.795,3.912-9.999,0.117-13.859c-0.039-0.039-0.078-0.078-0.117-0.117l-11.228-11.063H462c5.523,0,10-4.477,10-10C472,385.476,467.523,380.999,462,380.999z"/></g></g></svg>
