changements (connexion wsa et wsc)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="col-sm-5 col-lg-7">
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input type="text" class="input-sm" name="name" id="name" placeholder="Quel est votre pseudo/nickname" required />
+          <input type="text" class="input-sm" name="name" id="name" placeholder="Quel est votre pseudo/nickname" autocomplete="nickname" required />
         </div>
       </div>
       <div id="divTwoInputs" class="col-sm-6 col-lg-4">
@@ -45,7 +45,7 @@
           </div>
           <div class="col-xs-6">
             <div class="input-group col-xs-12">
-              <input type="password" class="input-sm" name="pass" id="pass" placeholder="Mot secret" required />
+              <input type="password" class="input-sm" name="pass" id="pass" placeholder="Mot secret" autocomplete="current-password" required />
             </div>
           </div>
         </div>
