--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
       </div>
     </div>
     <div id="msgs">
+      <div id="heure">
+        <div><div class="country">Québec</div><div id="heureQuebec"></div></div>
+        <div style="margin-left:13px;margin-right:13px;">
+          <svg width="1.7em" height="1.7em" viewBox="0 0 16 16" class="bi bi-clock" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z"/>
+            <path fill-rule="evenodd" d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"/>
+          </svg>
+        </div>
+        <div><div class="country">France</div><div id="heureFrance"></div></div>
+      </div>
       <ul id="messages" class="scrollbar">
         <!--<li>7/14/2020, 5:15:59 AM <strong> User</strong> : lol</li>-->
       </ul>
