modale compatibilité fureteur

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="name-div" class="row">
       <div class="col-sm-5 col-lg-7">
         <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+          <span class="input-group-addon" style="color:#888888;"><i class="glyphicon glyphicon-user"></i></span>
           <input type="text" class="input-sm" name="name" id="name" placeholder="Quel est votre pseudo/nickname" autocomplete="nickname" required />
         </div>
       </div>
@@ -164,14 +164,14 @@
       <span id="icon7" data-toggle="tooltip" data-placement="bottom" title="Non">&#10060;</span>
       <span id="icon8" data-toggle="tooltip" data-placement="bottom" title="Je veux parler!">&#128172;</span>
     </div>
-    <br/>
   </div>
 </div>
 <!-- modal end -->
 
 <div id="m_i" class="modal fade"  tabindex="-1" role="dialog" aria-hidden="true"></div>
 <div id="m_aye" class="modal" tabindex="-1" role="dialog" aria-hidden="true"></div>
-<div id="m_sc" class="modal" tabindex="-1" role="dialog" aria-hidden="true"></div>
+<div id="m_sc" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
+<div id="m_check" class="modal text-center" tabindex="-1" role="dialog" aria-hidden="true"></div>
 
 </body>
 </html>
