--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>wsc v3.0</title>
   <meta charset="utf-8">
+  <meta name="description" content="WSC web secure chat OIL Online Interative Learning Marie Bruggeman Guy Francoeur">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" id="favicon">
   <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
