--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     if (!(browser.length > 0 && (browser == "opera" || browser == "chrome" || browser == "edge"))) window.location = "./err.html";
 
     $.getScript('./js/e.md.js', console.log('e.md.js loaded'));
-    $.getScript('./js/g.voix.js', console.log('voix.js loaded'));
-    $.getScript('./js/g.icon.js', console.log('icon.js loaded'));
-    $.getScript('./js/index.js', console.log('indexJS loaded'));
+    $.getScript('./js/g.voix.js', console.log('g.voix.js loaded'));
+    $.getScript('./js/g.icon.js', console.log('g.icon.js loaded'));
+    $.getScript('./js/index.js', console.log('index.js loaded'));
   </script>
 </head>
 <body>
