--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@
 <body>
   <form>
     <div id="name-div" class="row">
-      <!--<div class="col-sm-5 col-lg-7">
-        <div class="input-group">
-          <span class="input-group-addon" style="color:#888888;"><i class="glyphicon glyphicon-user"></i></span>
-          <input type="text" class="input-sm" name="name" id="name" placeholder="Quel est votre pseudo/nickname" autocomplete="nickname" required />
-        </div>
-      </div> -->
-      <div id="divTwoInputs" class="col-sm-6 col-lg-4">
+      <div id="divTwoInputs" class="col-sm-11">
         <div class="row">
           <div class="col-xs-6">
             <div class="input-group col-xs-12">
