--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <script>
-    if (location.pathname != '/wsc/') location.replace(location.protocol+'//'+location.host+'/wsc/');
+    //if (location.pathname != '/wsc/') location.replace(location.protocol+'//'+location.host+'/wsc/');
   </script>
   <title>wsc v3.0</title>
   <meta charset="utf-8">
@@ -35,9 +35,11 @@
     $.getScript('./js/index.js', console.log('index.js loaded'));
   </script>
 </head>
-<body>
+<body vlass="grey">
+  <div id="content">
   <form>
-    <div id="name-div" class="row">
+    <!--<div id="name-div" class="row">
+      
       <div id="divTwoInputs" class="col-sm-11">
         <div class="row">
           <div class="col-xs-6">
@@ -57,7 +59,8 @@
         <button class="btn btn-sm col-sm-12 col-xs-4" id="bName" disabled><i class="glyphicon glyphicon-ok"></i></button>
         <div class="hidden-sm col-xs-4"></div>
       </div>
-    </div>
+    
+    </div>-->
     <div id="welcome">
       <div class="hidden-xs col-sm-3 col-md-3" style="display:flex;align-items:center;">
         <div class="live"></div>
@@ -170,9 +173,12 @@
 </div>
 <!-- modal end -->
 
+</div>
+
 <div id="m_i" class="modal fade"  tabindex="-1" role="dialog" aria-hidden="true"></div>
 <div id="m_aye" class="modal" tabindex="-1" role="dialog" aria-hidden="true"></div>
 <div id="m_sc" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
+<div id="m_login" class="modal" tabindex="-1" role="dialog" aria-hidden="true"></div>
 
 </body>
 </html>
