--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <script>
-    //if (location.pathname != '/wsc/') location.replace(location.protocol+'//'+location.host+'/wsc/');
+    if (location.pathname != '/wsc/') location.replace(location.protocol+'//'+location.host+'/wsc/');
   </script>
   <title>wsc v3.0</title>
   <meta charset="utf-8">
@@ -38,29 +38,6 @@
 <body vlass="grey">
   <div id="content">
   <form>
-    <!--<div id="name-div" class="row">
-      
-      <div id="divTwoInputs" class="col-sm-11">
-        <div class="row">
-          <div class="col-xs-6">
-            <div class="input-group col-xs-12">
-              <input type="number" class="input-sm" name="room" id="room" placeholder="Room" pattern="[0-9]{4}" required />
-            </div>
-          </div>
-          <div class="col-xs-6">
-            <div class="input-group col-xs-12">
-              <input type="password" class="input-sm" name="pass" id="pass" placeholder="Mot secret" autocomplete="current-password" required />
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-1 col-xs-12 text-center">
-        <div class="hidden-sm col-xs-4"></div>
-        <button class="btn btn-sm col-sm-12 col-xs-4" id="bName" disabled><i class="glyphicon glyphicon-ok"></i></button>
-        <div class="hidden-sm col-xs-4"></div>
-      </div>
-    
-    </div>-->
     <div id="welcome">
       <div class="hidden-xs col-sm-3 col-md-3" style="display:flex;align-items:center;">
         <div class="live"></div>
