Remplacement <img> par <video> sharing

--- a/m.sc.html
+++ b/m.sc.html
@@ -30,7 +30,7 @@
       </div>
       <button id="bShare" type="button" class="btn">Partager mon écran</button>
       <video id="video"></video>
-      <img id="image"></img>
+      <!--<img id="image"></img>-->
     </div>
   </div>
 </div>
