--- a/m.i.html
+++ b/m.i.html
@@ -1,6 +1,6 @@
 <!--<div class="modal fade" id="m_i" tabindex="-1" role="dialog" aria-labelledby="m_iTitle" aria-hidden="true"> -->
-  <div class="modal-dialog" role="document" style="max-width: 450px">
-    <div class="modal-content">
+  <div id="m_i_md" class="modal-dialog" role="document" style="max-width: 450px">
+    <div id="m_i_mc" class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
