--- a/m.i.html
+++ b/m.i.html
@@ -1,5 +1,5 @@
 <!--<div class="modal fade" id="m_i" tabindex="-1" role="dialog" aria-labelledby="m_iTitle" aria-hidden="true"> -->
-  <div>
+  <div id="m_i_md" style="max-width: 450px;">
     <div id="m_i_mc" class="modal-content" style="resize:both; overflow:auto;">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -13,12 +13,10 @@
             <span class="input-group-addon" id="inputGroupFileAddon01"><i class="glyphicon glyphicon-picture"></i></span>
             <input onchange="readURL(this);" type="file" class="form-control" id="fName" placeholder="PNG, JPG" aria-describedby="inputGroupFileAddon01">
             <span class="input-group-addon" id="inputGroupFileAddon02">png, jpg</span>
+            <button id="bmSubmit" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-send"></i></button>
           </div>
         </div>
         <img id="preview" src="" class="img-responsive"/>
-      </div>
-      <div class="modal-footer">
-        <button id="bmSubmit" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-send"></i></button>
       </div>
     </div>
   </div>
