--- a/m.i.html
+++ b/m.i.html
@@ -13,7 +13,9 @@
             <span class="input-group-addon" id="inputGroupFileAddon01"><i class="glyphicon glyphicon-picture"></i></span>
             <input onchange="readURL(this);" type="file" class="form-control" id="fName" placeholder="PNG, JPG" aria-describedby="inputGroupFileAddon01">
             <span class="input-group-addon" id="inputGroupFileAddon02">png, jpg</span>
-            <button id="bmSubmit" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-send"></i></button>
+            <span class="input-group-btn">
+              <button id="bmSubmit" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-send"></i></button>
+            </span>
           </div>
         </div>
         <img id="preview" src="" class="img-responsive"/>
