--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <div id="welcome">
       <div class="hidden-xs col-sm-3 col-md-3" style="display:flex;align-items:center;">
         <div class="live"></div>
-        <span  class="glyphicon glyphicon-menu-right"></span> <span id="welcometext"></span>
+        <span class="glyphicon glyphicon-menu-right"></span> <span id="welcometext"></span>
+        <span id="cLatence"></span>
       </div>
       <div id="divAudio" class="col-xs col-sm-5 col-md-6">
         <div id="divEmission">
