--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="hidden-xs col-sm-3 col-md-3" style="display:flex;align-items:center;">
         <div class="live"></div>
         <span class="glyphicon glyphicon-menu-right"></span> <span id="welcometext"></span>
-        <span id="cLatence"></span>
+        <span id="cLatence1"></span>/<span id="cLatence2"></span>
       </div>
       <div id="divAudio" class="col-xs col-sm-5 col-md-6">
         <div id="divEmission">
