--- a/m.i.html
+++ b/m.i.html
@@ -2,27 +2,30 @@
   <div id="m_i_md" class="modal-dialog" role="document "style="max-witdh: 350px;">
     <div id="m_i_mc" class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h3 class="modal-title col text-center">Image</h3>
+        <h4 class="modal-title col text-center">Image</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
       </div>
-      <div class="modal-body">
-        <div class="input-group">
-          <div class="input-group">
-            <span class="input-group-addon" id="inputGroupFileAddon01"><i class="glyphicon glyphicon-picture"></i></span>
-            <input onchange="readURL(this);" type="file" class="form-control" id="fName" placeholder="PNG, JPG" aria-describedby="inputGroupFileAddon01">
-            <span class="input-group-addon" id="inputGroupFileAddon02">png, jpg</span>
-            <span class="input-group-btn">
-              <button id="bmSubmit" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-send"></i></button>
-            </span>
+      <div class="modal-body" style="padding:40px;">
+        <div class="row">
+          <div id="bloc-im" class="col-1">
+            <svg xmlns="http://www.w3.org/2000/svg" height=18 style="margin-bottom:-8px;margin-left:-4px;" fill="currentColor" class="bi bi-card-image" viewBox="0 0 16 16">
+              <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+              <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm13 1a.5.5 0 0 1 .5.5v6l-3.775-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12v.54A.505.505 0 0 1 1 12.5v-9a.5.5 0 0 1 .5-.5h13z"/>
+            </svg>
           </div>
+          <div class="custom-file col-10">
+            <input onchange="readURL(this);" type="file" class="custom-file-input" id="fName" style="border-radius: 0 0 0 0;">
+            <label class="custom-file-label" for="fName">Choose file</label>
+          </div>
+            <button id="bmSubmit" type="button" class="btn btn-primary col-1">
+              <svg aria-hidden="true" height=15 style="margin-bottom:7px;margin-left: -4px;" focusable="false" data-prefix="fas" data-icon="paper-plane" class="svg-inline--fa fa-paper-plane fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M476 3.2L12.5 270.6c-18.1 10.4-15.8 35.6 2.2 43.2L121 358.4l287.3-253.2c5.5-4.9 13.3 2.6 8.6 8.3L176 407v80.5c0 23.6 28.5 32.9 42.5 15.8L282 426l124.6 52.2c14.2 6 30.4-2.9 33-18.2l72-432C515 7.8 493.3-6.8 476 3.2z"></path></svg>
+            </button>
         </div>
         <img id="preview" src="" class="img-responsive"/>
       </div>
     </div>
   </div>
 <!--</div>-->
-  <script>
-    $.getScript('./js/m.i.js', console.log('m_i.js loaded'));
-  </script>
+<script>
+  $.getScript('./js/m.i.js', console.log('m_i.js loaded'));
+</script>
