--- a/m.login.html
+++ b/m.login.html
@@ -1,26 +1,24 @@
 <div class="modal-dialog" role="document">
   <div class="modal-content">
     <div class="modal-body text-center">
-      <div class="row">
+      <div class="row pb-4">
         <img src="android-chrome-192x192.png">
-        <h3>WSC</h3>
+        <h4 class="mx-auto pt-4">WSC</h4>
       </div>
-      <br/><br/>
-      <form>
-          <div class="input-group col-xs-12">
-            <input type="number" class="input-sm" name="room" id="room" placeholder="Room" pattern="[0-9]{4}" required />
-          </div>
-          <br/><br/>
-          <div class="input-group col-xs-12">
-            <input type="password" class="input-sm" name="pass" id="pass" placeholder="Mot secret" autocomplete="current-password" required />
-          </div>
-          <br/><br/>
-          <div class="text-center col-xs-12">
-            <button class="btn btn-sm m-auto" id="bName">Connexion <i class="glyphicon glyphicon-log-in"></i></button>
-            <br/><br/>
-          </div>
+      <form class="pt-2">
+        <div class="col-xs-12 pb-4">
+          <input type="number" class="form-control form-control-sm" name="room" id="room" placeholder="Room" pattern="[0-9]{4}" required />
+        </div>
+        <div class="col-xs-12 pb-4 pt-2">
+          <input type="password" class="form-control form-control-sm" name="pass" id="pass" placeholder="Mot secret" autocomplete="current-password" required />
+        </div>
+        
+        <div class="col-xs-12 pt-4">
+          <button class="btn btn-sm m-auto" id="bName">Connexion 
+            <svg width="15" height="15" style="margin-bottom:3px;" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M416 448h-84c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h84c17.7 0 32-14.3 32-32V160c0-17.7-14.3-32-32-32h-84c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h84c53 0 96 43 96 96v192c0 53-43 96-96 96zm-47-201L201 79c-15-15-41-4.5-41 17v96H24c-13.3 0-24 10.7-24 24v96c0 13.3 10.7 24 24 24h136v96c0 21.5 26 32 41 17l168-168c9.3-9.4 9.3-24.6 0-34z"></path></svg>
+          </button>
+        </div>
       </form>
-      <br/><br/>
     </div>
   </div>
 </div>
